deploy/deployment/operator/Deployment_airlock-microgateway-license-guard-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: airlock-microgateway-license-guard
    app.kubernetes.io/version: 4.1.0
  name: airlock-microgateway-license-guard-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: cache
      app.kubernetes.io/name: airlock-microgateway-license-guard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cache
        app.kubernetes.io/name: airlock-microgateway-license-guard
        app.kubernetes.io/version: 4.1.0
    spec:
      containers:
        - args:
            - /redis-config-dir/redis.conf
          image: cgr.dev/chainguard/redis@sha256:31e5ad71a315a1d6b75a93dfabcbfbe2cfcd6fe295cb605bad7441c17a2c48e8
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - '[ "$(redis-cli --tls --insecure ping)" = "PONG" ]'
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - '[ "$(redis-cli --tls --insecure ping)" = "PONG" ]'
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /data
              name: redis-data-dir
            - mountPath: /etc/certs
              name: certificates
            - mountPath: redis-config-dir
              name: redis-config
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: redis-data-dir
        - name: certificates
          secret:
            secretName: airlock-microgateway-license-guard-redis-cert
        - configMap:
            name: airlock-microgateway-license-guard-redis-config
          name: redis-config
