deploy/deployment/operator/Deployment_airlock-microgateway-operator-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.1.5
    control-plane: airlock-microgateway-operator
  name: airlock-microgateway-operator-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: airlock-microgateway-operator
      control-plane: airlock-microgateway-operator
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: airlock-microgateway-operator
        app.kubernetes.io/version: 4.1.5
        control-plane: airlock-microgateway-operator
    spec:
      containers:
        - args:
            - --config=operator_config.yaml
          env:
            - name: ENGINE_IMAGE
              value: docker.io/ergon/airlock-microgateway-engine:4.1.5@sha256:db6ae21614ccbeb4c1b64357c9143e12fee9583d78b0d83e563e092ad22c713b
            - name: NETWORK_VALIDATOR_IMAGE
              value: busybox:1.36.1-musl@sha256:bc6e0c5c7fdd36de6af8274b26b60d1a1c5d2cef748bebcba5395227d8525050
            - name: OPERATOR_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: OPERATOR_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: docker.io/ergon/airlock-microgateway-operator:4.1.5@sha256:2f89570f8d0a204b299a5ca5a484bf5c41cb667e039a2535836048e798a15161
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 13377
              name: xds-server
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /opt/airlock/license/
              name: airlock-microgateway-license
              readOnly: true
            - mountPath: /operator_config.yaml
              name: operator-config
              subPath: operator_config.yaml
            - mountPath: /sidecar/engine_container_template.yaml
              name: operator-config
              subPath: engine_container_template.yaml
            - mountPath: /sidecar/network_validator_container_template.yaml
              name: operator-config
              subPath: network_validator_container_template.yaml
            - mountPath: /engine_bootstrap_config_template.yaml
              name: operator-config
              subPath: engine_bootstrap_config_template.yaml
      securityContext:
        runAsNonRoot: true
      serviceAccountName: airlock-microgateway-operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
        - name: airlock-microgateway-license
          secret:
            defaultMode: 292
            optional: true
            secretName: airlock-microgateway-license
        - configMap:
            name: airlock-microgateway-operator-operator-config
          name: operator-config
