deploy/deployment/operator/MutatingWebhookConfiguration_airlock-microgateway-operator-webhook-ns.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: OPERATOR_NAMESPACE/airlock-microgateway-operator-serving-cert
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.1.7
  name: airlock-microgateway-operator-webhook-ns
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /mutate-v1-pod
    failurePolicy: Fail
    name: mutate-pod.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
