deploy/deployment/operator/Service_airlock-microgateway-license-guard-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: airlock-microgateway-license-guard
    app.kubernetes.io/version: 4.1.1
  name: airlock-microgateway-license-guard-redis
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: airlock-microgateway-license-guard
