deploy/deployment/operator/Service_airlock-microgateway-license-guard.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: airlock-microgateway-license-guard
    app.kubernetes.io/version: 4.1.4
  name: airlock-microgateway-license-guard
spec:
  ports:
    - appProtocol: grpc
      name: ratelimit
      port: 13378
      protocol: TCP
      targetPort: 18295
    - appProtocol: http
      name: metrics
      port: 9102
      protocol: TCP
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: airlock-microgateway-license-guard
  type: ClusterIP
